--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -2,7 +2,7 @@
     height: 50px;
     border-radius: 8px;
     font-weight: 500;
-    background: #835afd;
+    background: #FF93D6;
     color: #FFF;
     padding: 0 32px;
     display: flex;
@@ -14,8 +14,8 @@
 
     &.outlined {
         background: #FFF;
-        border: 1px solid #835afd;
-        color: #835afd;
+        border: 1px solid #FF93D6;
+        color: #FF93D6;
     }
 
     &:not(disabled):hover {
