--- a/src/styles/roomcode.scss
+++ b/src/styles/roomcode.scss
@@ -4,14 +4,14 @@
     overflow: hidden;
 
     background: #FFF;
-    border: 1px solid #835afd;
+    border: 1px solid #FF93D6;
     cursor: pointer;
 
     display: flex;
     align-items: stretch;
     
     div {
-        background: #835afd;
+        background: #FF93D6;
         padding: 0 12px;
         display: flex;
         justify-content: center;
