--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,8 @@
 
 body {
     background-color: #f8f8f8;
-    color: #29292e;
+    color: #29292e; 
+    height: 100%;
 }
 
 body, input, button, textarea {
